--- a/Something Management Program Remastered/Something Management Program Remastered.csproj
+++ b/Something Management Program Remastered/Something Management Program Remastered.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Model\" />
+    <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
 </Project>
