--- a/Something Management Program Remastered/Something Management Program Remastered.csproj
+++ b/Something Management Program Remastered/Something Management Program Remastered.csproj
@@ -12,4 +12,8 @@
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
+  </ItemGroup>
+
 </Project>
