--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,6 @@
 
 # CS8618: Non-nullable field must contain a non-null value when exiting constructor. Consider declaring as nullable.
 dotnet_diagnostic.CS8618.severity = suggestion
+
+# CS0169: The field 'ObjectiveValue.amount' is never used
+dotnet_diagnostic.CS0169.severity = silent
