Removed ModifierView and ModifierViewModel

--- a/Something Management Program Remastered/Something Management Program Remastered.csproj
+++ b/Something Management Program Remastered/Something Management Program Remastered.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>Something_Management_Program_Remastered</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
   </PropertyGroup>
 
   <ItemGroup>
