Fixed Modifier button acces to command

--- a/Something Management Program Remastered/Something Management Program Remastered.csproj
+++ b/Something Management Program Remastered/Something Management Program Remastered.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MultiValueConvert\" />
+  </ItemGroup>
+
 </Project>
